syntax = "proto3";

package wfa.measurement.internal.kingdom;

import "src/main/proto/wfa/measurement/internal/kingdom/report_config_details.proto";

option java_package = "org.wfanet.measurement.internal.kingdom";
option java_multiple_files = true;

// Proto representation of the internal ReportConfig entity type.
message ReportConfig {
  fixed64 external_advertiser_id = 1;
  fixed64 external_report_config_id = 2;

  int64 num_requisitions = 3;
  ReportConfigState state = 4;

  ReportConfigDetails report_config_details = 5;
  string report_config_details_json = 6;

  enum ReportConfigState {
    REPORT_CONFIG_STATE_UNKNOWN = 0;
    ACTIVE = 1;  // Enabled
    // TODO: add more states or remove if states don't make sense for report.
  }
}
